[gd_scene load_steps=5 format=3 uid="uid://d1diackjfa7dn"]

[ext_resource type="Script" path="res://Game/battle_scene.gd" id="1_oktsy"]
[ext_resource type="Texture2D" uid="uid://btv1hk271nm3f" path="res://Assets/UI/UI_Flat_Banner_02_Downward.png" id="2_1khe4"]
[ext_resource type="Texture2D" uid="uid://ceqaecl5j5wd1" path="res://Assets/Portraits/friend.png" id="3_h8atp"]
[ext_resource type="Theme" uid="uid://b5kvna3pduhqe" path="res://Menu/Player Menu/Menu_Theme.tres" id="4_006qh"]

[node name="BattleScene_New" type="CanvasLayer"]
script = ExtResource("1_oktsy")

[node name="BattleSceneContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemiesContainer" type="HBoxContainer" parent="BattleSceneContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftEnemy" type="CenterContainer" parent="BattleSceneContainer/EnemiesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftEnemyController" type="Control" parent="BattleSceneContainer/EnemiesContainer/LeftEnemy"]
layout_mode = 2

[node name="MiddleEnemy" type="CenterContainer" parent="BattleSceneContainer/EnemiesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MiddleEnemyControl" type="Control" parent="BattleSceneContainer/EnemiesContainer/MiddleEnemy"]
layout_mode = 2

[node name="RightEnemy" type="CenterContainer" parent="BattleSceneContainer/EnemiesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightEnemyControl" type="Control" parent="BattleSceneContainer/EnemiesContainer/RightEnemy"]
layout_mode = 2

[node name="PlayerBG" type="NinePatchRect" parent="BattleSceneContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
patch_margin_left = 17
patch_margin_top = 8
patch_margin_right = 17
patch_margin_bottom = 12

[node name="PlayerContainer" type="HBoxContainer" parent="BattleSceneContainer/PlayerBG"]
layout_mode = 2
offset_right = 1080.0
offset_bottom = 250.0

[node name="PortraitContainer" type="MarginContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/margin_left = 82
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NinePatchRect" type="NinePatchRect" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PortraitContainer"]
layout_mode = 2
texture = ExtResource("2_1khe4")
region_rect = Rect2(16, 7, 68, 18)
patch_margin_left = 3
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PortraitContainer/NinePatchRect"]
layout_mode = 2
offset_right = 208.0
offset_bottom = 230.0

[node name="CenterContainer" type="CenterContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PortraitContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PortraitContainer/NinePatchRect/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PortraitContainer/NinePatchRect/VBoxContainer/CenterContainer/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_h8atp")

[node name="Label" type="Label" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PortraitContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "This Guy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerActionsContainer" type="MarginContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerActionCluster" type="VBoxContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Attack" type="Button" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer/HBoxContainer/PlayerActionCluster"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_006qh")
text = "ATTACK"

[node name="HBoxContainer" type="HBoxContainer" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer/HBoxContainer/PlayerActionCluster"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Ability" type="Button" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer/HBoxContainer/PlayerActionCluster/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_006qh")
text = "ABILITY"

[node name="Item" type="Button" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer/HBoxContainer/PlayerActionCluster/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_006qh")
text = "ITEMS"

[node name="Escape" type="Button" parent="BattleSceneContainer/PlayerBG/PlayerContainer/PlayerActionsContainer/HBoxContainer/PlayerActionCluster"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_006qh")
text = "ESCAPE"
